Fix minimum size of iframes for better display on mobile devices

--- a/static/css/responsive-xaringan-iframe.css
+++ b/static/css/responsive-xaringan-iframe.css
@@ -15,18 +15,20 @@ html, body {
   display:flex; 
   flex-direction:column;
   overflow: hidden;
-  /* padding-top: 56.25%; */
+  padding-top: 56.25%;
 }
 
 
 .responsive-container-xaringan iframe {
   position: absolute;
+  min-height: 170px;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
   border: 0;
   flex-grow: 1;
+  flex-shrink: 0;
   z-index: 100;
 }
 
@@ -52,6 +54,8 @@ html, body {
 
 .responsive-container-rmd iframe{
   flex-grow: 1;
+  flex-shrink: 0;
+  min-height: 25em;
   position: relative;
   /* z-index:100; */
   border: none;
